Fix overflow

--- a/www/assets/saas/panel.scss
+++ b/www/assets/saas/panel.scss
@@ -42,11 +42,10 @@ html,body{
 }
 
 #sidebar-content {
-  min-height:auto;
+  min-height:100%;
   min-width:100%;
   margin:0px;
   padding:0px;
-  overflow-y:scroll;
 }
 
 .header-dropdown {
